Fix href tag not correct

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,10 @@
 <body>
 <div>
     <h1>Hello from home </h1>
-    <a href="@{/register}">Register </a>
+    <a th:href="@{/register}">Register </a>
+
+    <a th:href="@{/list_users}"> Users</a>
+
     <h1>Hello from sss </h1>
 </div>
 </body>
