--- a/src/main/resources/templates/done.html
+++ b/src/main/resources/templates/done.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
+<html xmlns:th="https://www.thymeleaf.org">
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>done</title>
 </head>
 <body>
+<div>
+
     <h1>Done.... </h1>
+    <a th:href="@{/list_users}"> Users</a>
+</div>
+
 </body>
 </html>
