Show new fields when registered

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,6 +24,14 @@
         <input th:field="*{password}" type="password"/><br/>
         <br/>
 
+        <label>Email:</label>
+        <input th:field="*{email}" type="email"/><br/>
+        <br/>
+
+        <label>Age:</label>
+        <input th:field="*{age}" type="number"/><br/>
+        <br/>
+
         <button type="submit">Register</button>
     </form>
 </div>
