--- a/src/main/resources/templates/done.html
+++ b/src/main/resources/templates/done.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/html">
 <html xmlns:th="https://www.thymeleaf.org">
 
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>done</title>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous"></link>
 </head>
 <body>
-<div>
-
-    <h1>Done.... </h1>
-    <a th:href="@{/list_users}"> Users</a>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">Success
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="/">Home</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
+</div>
+<div class="container">
+    <div class="hero-unit">
+        </br>
+        </br>
+        </br>
 
+        <h1>Registration Done Successfully</h1>
+        <p>
+            Welcome to the Spring Security application!
+            Get started quickly by signing in.
+        </p>
+        <p>
+            <a href="/signup" th:href="@{/list_users}" class="btn btn-large btn-success">Sign In</a>
+        </p>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"
+        integrity="sha256-VAvG3sHdS5LqTT+5A/aeq/bZGa/Uj04xKxY8KM/w9EE="
+        crossorigin="anonymous"></script>
+
+
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
