--- a/src/main/resources/templates/done.html
+++ b/src/main/resources/templates/done.html
@@ -12,7 +12,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Success
+            <a class="navbar-brand" href="#">Success</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
