--- a/src/main/resources/templates/list_users.html
+++ b/src/main/resources/templates/list_users.html
@@ -5,41 +5,97 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
+
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous"></link>
 </head>
 <body>
-<div>
-    <h1>Welcome  [[${#request.userPrincipal.principal.firstName}]] </h1>
-
-    <form action="#" th:action="@{/logout}" method="post" >
-
-        <button type="submit">Logout</button>
-    </form>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Welcome [[${#request.userPrincipal.principal.firstName}]] </a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li th:classappend="${module == 'home' ? 'active' : ''}">
+                    <a th:href="@{/register}">Register </a>
+                </li>
+                <li th:classappend="${module == 'tasks' ? 'active' : ''}">
+                    <a th:href="@{#}"> Home</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <a href="/signin" th:href="@{/list_users}">
+                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Sign in
+                    </a>
+                </li>
+                <li th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a href="/logout" th:href="@{#}" onclick="$('#form').submit();">
+                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;Logout
+                    </a>
+                    <form style="visibility: hidden" id="form" method="post" action="#" th:action="@{/logout}"></form>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 
-    <table>
-        <thead>
-        <tr>
-            <th> First Name</th>
-            <th> Last Name</th>
-            <th> Age</th>
-            <th> Email</th>
-            <th> Gender</th>
+<div class="container">
+    <div class="hero-unit">
+        </br>
+        </br>
+        </br>
 
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${listOfUser.empty}">
-            <td colspan="2"> No Users Available</td>
-        </tr>
-        <tr th:each="user : ${listOfUser}">
-            <td><span th:text="${user.firstName}"> First Name </span></td>
-            <td><span th:text="${user.lastName}"> Last Name </span></td>
-            <td><span th:text="${user.age}"> Age </span></td>
-            <td><span th:text="${user.email}"> Email </span></td>
-            <td><span th:text="${user.gender}"> Gender </span></td>
-        </tr>
-        </tbody>
-    </table>
+        <h1>Registration Done Successfully</h1>
+        <p>
+            Welcome to the Spring Security application!
+            GUsers:
+        </p>
+    </div>
 </div>
+<table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th> First Name</th>
+        <th> Last Name</th>
+        <th> Age</th>
+        <th> Email</th>
+        <th> Gender</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:if="${listOfUser.empty}">
+        <td colspan="2"> No Users Available</td>
+    </tr>
+    <tr th:each="user : ${listOfUser}">
+        <td><span th:text="${user.firstName}"> First Name </span></td>
+        <td><span th:text="${user.lastName}"> Last Name </span></td>
+        <td><span th:text="${user.age}"> Age </span></td>
+        <td><span th:text="${user.email}"> Email </span></td>
+        <td><span th:text="${user.gender}"> Gender </span></td>
+    </tr>
+    </tbody>
+</table>
+</div>
+
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"
+        integrity="sha256-VAvG3sHdS5LqTT+5A/aeq/bZGa/Uj04xKxY8KM/w9EE="
+        crossorigin="anonymous"></script>
+
+
+<script
+        src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+</body>
 </body>
 </html>
