--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,15 +10,18 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container">
     <!-- PAGE TITLE -->
     <div class="page-title">
         <h2>
-            <span class="fa fa-arrow-circle-o-left"></span> Form Register
+            </br>
+            <span class="fa fa-arrow-circle-o-left">Form Registration</span>
+            </br> </br>
         </h2>
     </div>
 
 </div>
+<div class="container">
 
 
     <form th:action="@{/reg}" th:object="${user}" method="post" class="form">
@@ -63,7 +66,7 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary btn-block">Submit</button>
     </form>
 </div>
 
